--- a/Opdrachtenphp/php.html
+++ b/Opdrachtenphp/php.html
@@ -12,6 +12,8 @@
   <br>
   <a href="phpbegincursus/zwemclubs.php"> Zwemclubs </a> 
   <br>
+  <a href="phpbegincursus/kapperszaak.php"> Kapperszaak </a> 
+  <br>
   <a href="phpbegincursus/functies.php"> Functies </a>
   <br>
   <a href="phpbegincursus/include/main.php"> Includes </a>
@@ -26,7 +28,7 @@
   <br>
   <a href="phpbegincursus/class_method/index.php"> Object Oriented Programming </a>
   <br>
-  <a href="phpbegincursus/monkeybusiness.php"> Monkey Business </a>
+  <a href="phpbegincursus/monkeybusiness/monkeybusiness.php"> Monkey Business </a>
   <br>
 
 
