--- a/Opdrachtenphp/php.html
+++ b/Opdrachtenphp/php.html
@@ -30,6 +30,8 @@
   <br>
   <a href="phpbegincursus/monkeybusiness/monkeybusiness.php"> Monkey Business </a>
   <br>
+  <a href="phpbegincursus/mrwheely/auto.php"> Mr Wheely </a>
+  <br>
 
 
   </body>
